--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- important -->
   <title>9-Instrument Drumpos</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -13,15 +13,14 @@
       margin: 0;
       padding: 0;
     }
-    h1 { margin: 15px 0; font-size: 1.8em; }
-    p { font-size: 1em; margin: 5px 0; }
-
+    h1 {margin: 15px 0; font-size: 22px;}
+    p {margin: 4px 0; font-size: 14px;}
     .drum-container {
       display: flex;
       flex-direction: column;
       align-items: center;
       gap: 15px;
-      margin: 15px;
+      margin-top: 10px;
     }
     .row {
       display: flex;
@@ -30,48 +29,40 @@
       justify-content: center;
     }
     button {
-      flex: 1 1 28%; /* responsive width: about 3 per row on mobile */
-      min-width: 90px;
-      max-width: 120px;
-      height: 90px;
-      font-size: 14px;
-      font-weight: bold;
-      border: none;
-      border-radius: 12px;
+      width: 90px; height: 90px;
+      font-size: 13px; font-weight: bold;
+      border: none; border-radius: 12px;
       background: linear-gradient(145deg,#444,#222);
-      color: white;
-      cursor: pointer;
-      box-shadow: 2px 2px 5px #000;
+      color: white; cursor: pointer;
+      box-shadow: 3px 3px 6px #000;
       transition: 0.1s;
+      touch-action: manipulation;
     }
-    button:active {
-      background: #f39c12;
-      transform: scale(0.95);
-    }
-
+    button:active {background: #f39c12; transform: scale(0.95);}
     .controls {
-      margin: 20px 0;
+      margin-top: 20px;
       display: flex;
+      flex-direction: column;
+      align-items: center;
       gap: 10px;
-      justify-content: center;
-      flex-wrap: wrap;
     }
     .controls button {
-      flex: 1 1 45%;
-      min-width: 140px;
-      height: 50px;
-      font-size: 16px;
+      width: 140px; height: 45px;
+      font-size: 15px; border-radius: 10px;
     }
-
-    /* Extra small screens */
-    @media (max-width: 480px) {
-      button {
-        flex: 1 1 45%; /* 2 per row */
-        height: 80px;
-        font-size: 12px;
-      }
-      h1 { font-size: 1.5em; }
-      p { font-size: 0.9em; }
+    .slider-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 6px;
+    }
+    input[type="range"] {
+      width: 200px;
+    }
+    @media (orientation: landscape) {
+      body {font-size: 16px;}
+      button {width: 100px; height: 100px; font-size: 14px;}
+      .controls {flex-direction: row; gap: 20px;}
     }
   </style>
 </head>
@@ -81,15 +72,184 @@
   <p>Tap once to unlock sound, then play!</p>
 
   <div class="drum-container">
-    <!-- same 3 rows of buttons as your code -->
-    <!-- (keep your triggerPlay() and playSound() script as is) -->
+    <div class="row">
+      <button onclick="triggerPlay('kick','left')">Kick</button>
+      <button onclick="triggerPlay('snare','left')">Snare</button>
+      <button onclick="triggerPlay('hihat','left')">Hi-Hat</button>
+      <button onclick="triggerPlay('tom1','left')">Tom 1</button>
+      <button onclick="triggerPlay('tom2','left')">Tom 2</button>
+      <button onclick="triggerPlay('crash','left')">Crash</button>
+      <button onclick="triggerPlay('ride','left')">Ride</button>
+      <button onclick="triggerPlay('clap','left')">Clap</button>
+      <button onclick="triggerPlay('cowbell','left')">Cowbell</button>
+    </div>
+    <div class="row">
+      <button onclick="triggerPlay('kick','right')">Kick</button>
+      <button onclick="triggerPlay('snare','right')">Snare</button>
+      <button onclick="triggerPlay('hihat','right')">Hi-Hat</button>
+      <button onclick="triggerPlay('tom1','right')">Tom 1</button>
+      <button onclick="triggerPlay('tom2','right')">Tom 2</button>
+      <button onclick="triggerPlay('crash','right')">Crash</button>
+      <button onclick="triggerPlay('ride','right')">Ride</button>
+      <button onclick="triggerPlay('clap','right')">Clap</button>
+      <button onclick="triggerPlay('cowbell','right')">Cowbell</button>
+    </div>
+    <div class="row">
+      <button onclick="triggerPlay('kick','center')">Kick</button>
+      <button onclick="triggerPlay('snare','center')">Snare</button>
+      <button onclick="triggerPlay('hihat','center')">Hi-Hat</button>
+      <button onclick="triggerPlay('tom1','center')">Tom 1</button>
+      <button onclick="triggerPlay('tom2','center')">Tom 2</button>
+      <button onclick="triggerPlay('crash','center')">Crash</button>
+      <button onclick="triggerPlay('ride','center')">Ride</button>
+      <button onclick="triggerPlay('clap','center')">Clap</button>
+      <button onclick="triggerPlay('cowbell','center')">Cowbell</button>
+    </div>
   </div>
 
   <div class="controls">
     <button onclick="enableLoop()">Enable Loop</button>
     <button onclick="stopLoop()">Stop Loop</button>
+    <div class="slider-container">
+      <label for="tempo">Tempo: <span id="tempoVal">120</span> BPM</label>
+      <input type="range" id="tempo" min="40" max="240" value="120" oninput="updateTempo(this.value)">
+    </div>
   </div>
 
-  <!-- keep your existing <script> section unchanged -->
+  <script>
+    const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+    document.body.addEventListener("click", () => {
+      if (audioCtx.state === "suspended") audioCtx.resume();
+    }, { once: true });
+
+    let loopInterval = null;
+    let lastPlayed = null;
+    let bpm = 120;
+
+    function triggerPlay(type, position) {
+      lastPlayed = {type, position};
+      playSound(type, position);
+    }
+
+    function enableLoop() {
+      if (!lastPlayed) {
+        alert("Play an instrument first, then enable loop.");
+        return;
+      }
+      if (loopInterval) clearInterval(loopInterval);
+      const interval = (60000 / bpm); // ms per beat
+      loopInterval = setInterval(() => {
+        playSound(lastPlayed.type, lastPlayed.position);
+      }, interval);
+    }
+
+    function stopLoop() {
+      clearInterval(loopInterval);
+      loopInterval = null;
+    }
+
+    function updateTempo(value) {
+      bpm = value;
+      document.getElementById("tempoVal").textContent = value;
+      if (loopInterval) { // adjust while looping
+        enableLoop();
+      }
+    }
+
+    function playSound(type, position) {
+      const panner = audioCtx.createStereoPanner();
+      if (position === 'left') panner.pan.value = -1;
+      else if (position === 'right') panner.pan.value = 1;
+      else panner.pan.value = 0;
+
+      if (type === 'kick') {
+        const osc = audioCtx.createOscillator();
+        const gain = audioCtx.createGain();
+        osc.connect(gain).connect(panner).connect(audioCtx.destination);
+        osc.type = "sine";
+        osc.frequency.setValueAtTime(120, audioCtx.currentTime);
+        osc.frequency.exponentialRampToValueAtTime(40, audioCtx.currentTime + 0.12);
+        gain.gain.setValueAtTime(1, audioCtx.currentTime);
+        gain.gain.exponentialRampToValueAtTime(0.001, audioCtx.currentTime + 0.12);
+        osc.start(); osc.stop(audioCtx.currentTime + 0.12);
+      }
+      else if (type === 'snare') {
+        const noiseBuffer = audioCtx.createBuffer(1, audioCtx.sampleRate * 0.2, audioCtx.sampleRate);
+        const output = noiseBuffer.getChannelData(0);
+        for (let i = 0; i < output.length; i++) output[i] = Math.random() * 2 - 1;
+        const noise = audioCtx.createBufferSource();
+        noise.buffer = noiseBuffer;
+        const noiseGain = audioCtx.createGain();
+        noiseGain.gain.setValueAtTime(1, audioCtx.currentTime);
+        noiseGain.gain.exponentialRampToValueAtTime(0.01, audioCtx.currentTime + 0.15);
+        const bandpass = audioCtx.createBiquadFilter();
+        bandpass.type = "bandpass"; bandpass.frequency.value = 1800;
+        noise.connect(bandpass).connect(noiseGain).connect(panner).connect(audioCtx.destination);
+        noise.start(); noise.stop(audioCtx.currentTime + 0.15);
+      }
+      else if (type === 'hihat' || type === 'ride') {
+        const noiseBuffer = audioCtx.createBuffer(1, audioCtx.sampleRate * 0.2, audioCtx.sampleRate);
+        const output = noiseBuffer.getChannelData(0);
+        for (let i = 0; i < output.length; i++) output[i] = Math.random() * 2 - 1;
+        const noise = audioCtx.createBufferSource();
+        noise.buffer = noiseBuffer;
+        const highpass = audioCtx.createBiquadFilter();
+        highpass.type = "highpass"; highpass.frequency.value = (type === 'hihat') ? 6000 : 3000;
+        const noiseGain = audioCtx.createGain();
+        noiseGain.gain.setValueAtTime(0.6, audioCtx.currentTime);
+        noiseGain.gain.exponentialRampToValueAtTime(0.01, audioCtx.currentTime + ((type === 'hihat') ? 0.05 : 0.3));
+        noise.connect(highpass).connect(noiseGain).connect(panner).connect(audioCtx.destination);
+        noise.start(); noise.stop(audioCtx.currentTime + ((type === 'hihat') ? 0.05 : 0.3));
+      }
+      else if (type === 'crash') {
+        const noiseBuffer = audioCtx.createBuffer(1, audioCtx.sampleRate * 1.5, audioCtx.sampleRate);
+        const output = noiseBuffer.getChannelData(0);
+        for (let i = 0; i < output.length; i++) output[i] = Math.random() * 2 - 1;
+        const noise = audioCtx.createBufferSource();
+        noise.buffer = noiseBuffer;
+        const highpass = audioCtx.createBiquadFilter();
+        highpass.type = "highpass"; highpass.frequency.value = 4000;
+        const noiseGain = audioCtx.createGain();
+        noiseGain.gain.setValueAtTime(1, audioCtx.currentTime);
+        noiseGain.gain.exponentialRampToValueAtTime(0.001, audioCtx.currentTime + 1.0);
+        noise.connect(highpass).connect(noiseGain).connect(panner).connect(audioCtx.destination);
+        noise.start(); noise.stop(audioCtx.currentTime + 1.0);
+      }
+      else if (type === 'clap') {
+        const noiseBuffer = audioCtx.createBuffer(1, audioCtx.sampleRate * 0.15, audioCtx.sampleRate);
+        const output = noiseBuffer.getChannelData(0);
+        for (let i = 0; i < output.length; i++) output[i] = Math.random() * 2 - 1;
+        const noise = audioCtx.createBufferSource();
+        noise.buffer = noiseBuffer;
+        const bandpass = audioCtx.createBiquadFilter();
+        bandpass.type = "bandpass"; bandpass.frequency.value = 2000;
+        const gain = audioCtx.createGain();
+        gain.gain.setValueAtTime(1, audioCtx.currentTime);
+        gain.gain.exponentialRampToValueAtTime(0.01, audioCtx.currentTime + 0.1);
+        noise.connect(bandpass).connect(gain).connect(panner).connect(audioCtx.destination);
+        noise.start(); noise.stop(audioCtx.currentTime + 0.1);
+      }
+      else if (type === 'cowbell') {
+        const osc = audioCtx.createOscillator();
+        const gain = audioCtx.createGain();
+        osc.connect(gain).connect(panner).connect(audioCtx.destination);
+        osc.type = "square";
+        osc.frequency.setValueAtTime(540, audioCtx.currentTime);
+        gain.gain.setValueAtTime(0.7, audioCtx.currentTime);
+        gain.gain.exponentialRampToValueAtTime(0.01, audioCtx.currentTime + 0.25);
+        osc.start(); osc.stop(audioCtx.currentTime + 0.25);
+      }
+      else { // toms
+        const osc = audioCtx.createOscillator();
+        const gain = audioCtx.createGain();
+        osc.connect(gain).connect(panner).connect(audioCtx.destination);
+        osc.type = "sine";
+        osc.frequency.value = type === 'tom1' ? 200 : 120;
+        gain.gain.setValueAtTime(0.8, audioCtx.currentTime);
+        gain.gain.exponentialRampToValueAtTime(0.01, audioCtx.currentTime + 0.2);
+        osc.start(); osc.stop(audioCtx.currentTime + 0.2);
+      }
+    }
+  </script>
 </body>
 </html>
